<resources>
    <string name="app_name">Navigation Animation</string>

    <string name="activity_title_main">Navigation Views</string>
    <string name="activity_title_main_compose">Navigation Compose</string>

    <string name="label_fps">FPS</string>
    <string name="label_dropped">Dropped</string>">

    <string name="title_settings">Settings</string>
    <string name="menu_item_settings">Settings</string>

    <string name="settings_selectable_background">Use selectable background</string>
    <string name="settings_item_layout">Item layout</string>
    <string name="settings_item_layout_desc">Choose a layout for list items</string>
    <string name="settings_debug_frames">Show frames details</string>
    <string name="settings_click_delay">Click delay (ms)</string>
    <string name="settings_click_delay_desc">Click action will start after this delay</string>

    <string name="layout_option_simple">Single TextView</string>
    <string name="layout_option_iv_tv">ImageView + TextView</string>
    <string name="layout_option_iv_tv_compose">Icon + Text</string>
    <string name="layout_option_card">CardView</string>
    <string name="layout_option_card_compose">Card</string>

    <string-array name="layouts">
        <item>@string/layout_option_simple</item>
        <item>@string/layout_option_iv_tv</item>
        <item>@string/layout_option_card</item>
    </string-array>

    <string-array name="layouts_values">
        <item>simple</item>
        <item>iv_tv</item>
        <item>card</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>

</resources>