<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:key="selectable_background"
        app:title="@string/settings_selectable_background"/>

    <ListPreference
        android:key="item_layout"
        android:title="@string/settings_item_layout"
        android:summary="@string/settings_item_layout_desc"
        android:defaultValue="simple"
        android:entries="@array/layouts"
        android:entryValues="@array/layouts_values"/>

    <SwitchPreferenceCompat
        app:key="debug_frames"
        app:title="@string/settings_debug_frames"/>

    <SeekBarPreference
        android:key="click_delay"
        android:title="@string/settings_click_delay"
        android:summary="@string/settings_click_delay_desc"
        android:defaultValue="0"
        app:showSeekBarValue="true"
        app:min="0"
        android:max="225" />

</PreferenceScreen>